# surrox

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  deploy.sh  mkdocs.yml  pyproject.toml  start-prompt.txt
.claude/skills/: hypothesis-pbt.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
.hypothesis/constants/: 03acdea1d41ae371  07826760f9fc1d4b  0ec95315d782b2f5  1e3f2a703b41ef83  265c7d7da757f2fe  28b87fea97003b58  290e6ceaca24d784  2df20b850e01945c  2ed21d56e11f0e38  3208009611bd1bf8  422ac1720e01aba2  43566dd80cbeae67  437770af5098272e  437ad9817de1c290  4d3b88bb7fca0613  5089f99bade1743e  56f0653fdf93fff7  591a1306a1ba2f85  5d9c78990b1cb89f  6186b8025f674f4e  62058be1df4d8499  6a1e7ade3f6b8d28  6a796edf333345e9  705809b3b5eaa68d  7108fc894d4be8fa  73277d9be1182b3a  78e8969a0a1d5632  7baa2e5bf15d1771  83669c0ca387d1d2  87c7bf37eed84de5  8f8f7c102fe9d1e2  980505555eadcab7  9a4015bc8e0fedd1  9e4832c1cfa0aeda  a0ced4e06e0be3ce  aa79705e602f7ff1  ac6af155b3108006  ae281eac0a53b079  b08ceb7170fe6a3f  b1597ce1b0e90731  (+34 more)
.hypothesis/examples/04e6b3400353b141/: 959bc68c44f30b65  b7edfcf5d7680d96
.hypothesis/examples/959bc68c44f30b65/: 0f483b3d0d83ebe9  27cd7f95d5c21f16  36081cf9f3a46bf2  51c0783fe37101eb  64c3233759439ed7  6db8adfe9f7fbf8b  6de120ac9a6f7f0a  786be3b4087c3677  7f413e0e31d4ea32  8453c2f551030309  9af7b20875a7d4a3  c19280b92e0071b7
.hypothesis/examples/b7edfcf5d7680d96/: 020a2eee5c9e1f6f
docs/: architecture.md  concepts.md  getting-started.md  index.md  llms.txt  robots.txt
docs/api/: analysis.md  errors.md  facade.md  optimizer.md  persistence.md  problem.md  results.md  surrogate.md
docs/decisions/: 001-pydantic-v2-for-domain-models.md  002-immutable-problem-definition.md  003-constraints-as-separate-types.md  004-scenarios-as-first-class-entities.md  005-monotonic-relations-as-domain-knowledge.md  006-python-313-and-uv.md  007-surrogate-columns-deduplication.md  008-joint-optuna-study-across-estimator-families.md  009-ensemble-diversity-filter-and-softmax-weights.md  010-mapie-for-conformal-prediction.md  011-monotonicity-restricted-to-numeric-variables.md  012-estimator-family-protocol.md  013-eq-tolerance-for-data-constraints.md  014-algorithm-auto-selection.md  015-extrapolation-gate-with-encoded-features.md  016-conservative-constraint-evaluation.md  017-optimization-result-always-returned.md  018-hard-soft-constraint-severity.md  019-analysis-result-and-analyzer-separation.md  020-scenario-comparison-as-separate-entry-point.md  021-stdlib-logging-no-structlog.md  022-native-model-persistence-per-family.md  024-suggest-api-for-closed-loop-optimization.md  026-model-agnostic-shapley.md
docs/guides/: analysis.md  configuration.md  persistence.md  scenarios.md
docs/research/: surrogate.md
docs/specs/analysis/: spec.md
docs/specs/optimizer/: safety-notes.md
docs/specs/problem/: spec.md
docs/specs/surrogate/: spec.md
overrides/: main.html
src/surrox/: __init__.py  _logging.py  deprecation.py  exceptions.py  persistence.py  result.py  suggest.py  types.py
src/surrox/analysis/: __init__.py  analyzer.py  config.py  monotonicity.py  pdp.py  result.py  scenario.py  shap.py  shapley.py  summary.py  trade_off.py  types.py  what_if.py
src/surrox/optimizer/: __init__.py  algorithm.py  config.py  extrapolation.py  problem_adapter.py  result.py  runner.py  trust_region.py
tests/: conftest.py  strategies.py  test_facade.py  test_logging.py  test_serialization.py  test_suggest.py  test_suggest_properties.py
tests/analysis/: conftest.py  strategies.py  test_analyzer.py  test_config.py  test_monotonicity.py  test_properties.py  test_scenario.py  test_shapley.py  test_shapley_e2e.py  test_summary.py  test_trade_off.py  test_what_if.py
tests/integration/: benchmarks.py  test_end_to_end.py  test_isolation.py
tests/optimizer/: conftest.py  test_algorithm.py  test_config.py  test_extrapolation.py  test_problem_adapter.py  test_result.py  test_runner.py
tests/problem/: conftest.py  test_constraints.py  test_dataset.py  test_definition.py  test_domain_knowledge.py  test_objectives.py  test_property_based.py  test_scenarios.py  test_variables.py
tests/surrogate/: conftest.py  test_config.py  test_conformal.py  test_ensemble.py  test_families.py  test_manager.py  test_models.py  test_persistence.py  test_pipeline.py  test_property_based.py
(+27 files in other folders)
